--- a/index.html
+++ b/index.html
@@ -19,21 +19,23 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container main-nav">
         <nav class="site-nav">
           <a class="logo" href="./index.html" lang="en"><span>Web</span>Studio</a>
-          <ul class="list">
-            <li><a class="link current" href="">Студія</a></li>
-            <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
-            <li><a class="link" href="">Контакти</a></li>
+          <ul class="list nav">
+            <li class="item"><a class="link current" href="./index.html">Студія</a></li>
+            <li class="item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item"><a class="link" href="">Контакти</a></li>
           </ul>
         </nav>
 
         <ul class="contact list">
-          <li>
+          <li class="item">
             <a class="cotact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a class="cotact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="item">
+            <a class="cotact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -47,28 +49,32 @@
         <button class="hero-button" type="button">Замовити послугу</button>
       </section>
 
-      <section class="benefits">
+      <section class="benefits container">
         <h2 hidden>Переваги роботи з нами</h2>
-        <ul class="list">
-          <li>
+
+        <ul class="list about">
+          <li class="item">
             <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="benefits-text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
-          <li>
+
+          <li class="item">
             <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="benefits-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
-          <li>
+
+          <li class="item">
             <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
             <p class="benefits-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
+
+          <li class="item">
             <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="benefits-text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -77,24 +83,24 @@
         </ul>
       </section>
 
-      <section class="work">
+      <section class="work container">
         <h2 class="work-title">Чим ми займаємося</h2>
-        <ul class="list">
-          <li>
+        <ul class="list katalogue">
+          <li class="item">
             <img
               src="./images/work1.jpg"
               alt="Стіл, на столі планшет та клавіатура. Людина працює"
               width="370"
             />
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/work2.jpg"
               width="370"
               alt="Людина тримає телефон в лівій руці на фоні працюючого ноутбуку"
             />
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/work3.jpg"
               width="370"
@@ -105,57 +111,61 @@
       </section>
 
       <section class="team">
-        <h2 class="team-title-main">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/members_of_team/igor_dem.jpg"
-              alt="чоловік років тридцяти в окулярах та з бородою"
-              width="270"
-            />
-            <h3 class="team-title">Ігор Дем'яненко</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/members_of_team/olha_rep.jpg"
-              alt="білява жінка в окулярах усміхається. вдягнена в піджак"
-              width="270"
-            />
-            <h3 class="team-title">Ольга Рєпіна</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/members_of_team/mykola_tarasov.jpg"
-              alt="чоловік вдягнений в рубашку, посміхається"
-              width="270"
-            />
-            <h3 class="team-title">Микола Тарасов</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/members_of_team/myhailo_ermakov.jpg"
-              alt="чоловік в окулярах з бородою, вдягнений в чорну футболку"
-              width="270"
-            />
-            <h3 class="team-title">Михайло Єрмаков</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title-main">Наша команда</h2>
+          <ul class="list employee">
+            <li class="item">
+              <img
+                src="./images/members_of_team/igor_dem.jpg"
+                alt="чоловік років тридцяти в окулярах та з бородою"
+                width="270"
+              />
+              <h3 class="team-title">Ігор Дем'яненко</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="item">
+              <img
+                src="./images/members_of_team/olha_rep.jpg"
+                alt="білява жінка в окулярах усміхається. вдягнена в піджак"
+                width="270"
+              />
+              <h3 class="team-title">Ольга Рєпіна</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="item">
+              <img
+                src="./images/members_of_team/mykola_tarasov.jpg"
+                alt="чоловік вдягнений в рубашку, посміхається"
+                width="270"
+              />
+              <h3 class="team-title">Микола Тарасов</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="item">
+              <img
+                src="./images/members_of_team/myhailo_ermakov.jpg"
+                alt="чоловік в окулярах з бородою, вдягнений в чорну футболку"
+                width="270"
+              />
+              <h3 class="team-title">Михайло Єрмаков</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="logo link" href="./index.html" lang="en"><span>Web</span>Studio</a>
-      <address>
-        <ul class="list">
-          <li><a class="footer-link link" href=""> м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a class="footer-addres link" href=""> info@devstudio.com</a></li>
-          <li><a class="footer-addres link" href=""> +38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo link" href="./index.html" lang="en"><span>Web</span>Studio</a>
+        <address>
+          <ul class="list">
+            <li><a class="footer-link link" href=""> м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li><a class="footer-addres link" href=""> info@devstudio.com</a></li>
+            <li><a class="footer-addres link" href=""> +38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
