--- a/index.html
+++ b/index.html
@@ -49,65 +49,69 @@
         <button class="hero-button" type="button">Замовити послугу</button>
       </section>
 
-      <section class="benefits container">
-        <h2 hidden>Переваги роботи з нами</h2>
+      <section class="benefits">
+        <div class="container">
+          <h2 hidden>Переваги роботи з нами</h2>
 
-        <ul class="list about">
-          <li class="item">
-            <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="benefits-text">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
+          <ul class="list about">
+            <li class="item">
+              <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="benefits-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
 
-          <li class="item">
-            <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="benefits-text">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
+            <li class="item">
+              <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="benefits-text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
 
-          <li class="item">
-            <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
-            <p class="benefits-text">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
+            <li class="item">
+              <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
+              <p class="benefits-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
 
-          <li class="item">
-            <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="benefits-text">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
+            <li class="item">
+              <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="benefits-text">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="work container">
-        <h2 class="work-title">Чим ми займаємося</h2>
-        <ul class="list katalogue">
-          <li class="item">
-            <img
-              src="./images/work1.jpg"
-              alt="Стіл, на столі планшет та клавіатура. Людина працює"
-              width="370"
-            />
-          </li>
-          <li class="item">
-            <img
-              src="./images/work2.jpg"
-              width="370"
-              alt="Людина тримає телефон в лівій руці на фоні працюючого ноутбуку"
-            />
-          </li>
-          <li class="item">
-            <img
-              src="./images/work3.jpg"
-              width="370"
-              alt="Зображення працюючого планшету з палітрою кольорів на екрані"
-            />
-          </li>
-        </ul>
+      <section class="work">
+        <div class="container">
+          <h2 class="work-title">Чим ми займаємося</h2>
+          <ul class="list katalogue">
+            <li class="item">
+              <img
+                src="./images/work1.jpg"
+                alt="Стіл, на столі планшет та клавіатура. Людина працює"
+                width="370"
+              />
+            </li>
+            <li class="item">
+              <img
+                src="./images/work2.jpg"
+                width="370"
+                alt="Людина тримає телефон в лівій руці на фоні працюючого ноутбуку"
+              />
+            </li>
+            <li class="item">
+              <img
+                src="./images/work3.jpg"
+                width="370"
+                alt="Зображення працюючого планшету з палітрою кольорів на екрані"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="team">
@@ -120,8 +124,10 @@
                 alt="чоловік років тридцяти в окулярах та з бородою"
                 width="270"
               />
-              <h3 class="team-title">Ігор Дем'яненко</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="decription">
+                <h3 class="team-title">Ігор Дем'яненко</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -129,8 +135,10 @@
                 alt="білява жінка в окулярах усміхається. вдягнена в піджак"
                 width="270"
               />
-              <h3 class="team-title">Ольга Рєпіна</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="decription">
+                <h3 class="team-title">Ольга Рєпіна</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -138,8 +146,10 @@
                 alt="чоловік вдягнений в рубашку, посміхається"
                 width="270"
               />
-              <h3 class="team-title">Микола Тарасов</h3>
-              <p class="team-text">Marketing</p>
+              <div class="decription">
+                <h3 class="team-title">Микола Тарасов</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -147,8 +157,10 @@
                 alt="чоловік в окулярах з бородою, вдягнений в чорну футболку"
                 width="270"
               />
-              <h3 class="team-title">Михайло Єрмаков</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="decription">
+                <h3 class="team-title">Михайло Єрмаков</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -157,12 +169,16 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="logo link" href="./index.html" lang="en"><span>Web</span>Studio</a>
+        <a class="logo link" href="./index.html" lang="en"
+          ><span class="accent1">Web</span><span class="accent2">Studio</span></a
+        >
         <address>
-          <ul class="list">
-            <li><a class="footer-link link" href=""> м. Київ, пр-т Лесі Українки, 26</a></li>
-            <li><a class="footer-addres link" href=""> info@devstudio.com</a></li>
-            <li><a class="footer-addres link" href=""> +38 096 111 11 11</a></li>
+          <ul class="adress list">
+            <li class="item">
+              <a class="footer-link link" href=""> м. Київ, пр-т Лесі Українки, 26</a>
+            </li>
+            <li class="item"><a class="footer-addres link" href=""> info@devstudio.com</a></li>
+            <li class="item"><a class="footer-addres link" href=""> +38 096 111 11 11</a></li>
           </ul>
         </address>
       </div>
