--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <button class="hero-button" type="button">Замовити послугу</button>
       </section>
 
-      <section class="benefits">
+      <section class="benefits section">
         <div class="container">
           <h2 hidden>Переваги роботи з нами</h2>
 
@@ -85,7 +85,7 @@
         </div>
       </section>
 
-      <section class="work">
+      <section class="work section">
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="list katalogue">
@@ -114,7 +114,7 @@
         </div>
       </section>
 
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="team-title-main">Наша команда</h2>
           <ul class="list employee">
