--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
       </div>
     </header>
 
-    <main class="page">
+    <main class="page section">
       <section class="filter">
         <div class="container">
           <h1 hidden>Портфоліо</h1>
