added class section for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
       </div>
     </header>
 
-    <main class="page section">
-      <section class="filter">
+    <main class="page">
+      <section class="filter section">
         <div class="container">
           <h1 hidden>Портфоліо</h1>
           <ul class="list box">
