--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">
-          Ефективні рішення для <br />
-          вашого бізнесу
-        </h1>
-        <button class="hero-button" type="button">Замовити послугу</button>
+        <div class="main-title container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-button" type="button">Замовити послугу</button>
+        </div>
       </section>
 
       <section class="benefits section">
