--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <main>
       <section class="hero">
-        <div class="main-title container">
+        <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-button" type="button">Замовити послугу</button>
         </div>
