--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
             <li class="item">
               <a class="link" href="">
                 <img src="./images/portfolio/img1.jpg" alt="laptop" width="370" height="294" />
-                <div class="decription">
+                <div class="description">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
                 </div>
@@ -69,7 +69,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="decription">
+                <div class="description">
                   <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                   <p class="portfolio-text">Дизайн</p>
                 </div>
@@ -83,7 +83,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="decription">
+                <div class="description">
                   <h2 class="portfolio-title">Ресторан Seafood</h2>
                   <p class="portfolio-text">Додаток</p>
                 </div>
@@ -92,7 +92,7 @@
             <li class="item">
               <a class="link" href="">
                 <img src="./images/portfolio/img4.jpg" alt="headphones" width="370" height="294" />
-                <div class="decription">
+                <div class="description">
                   <h2 class="portfolio-title">Проєкт Prime</h2>
                   <p class="portfolio-text">Маркетинг</p>
                 </div>
@@ -101,7 +101,7 @@
             <li class="item">
               <a class="link" href="">
                 <img src="./images/portfolio/img5.jpg" alt="two boxes" width="370" height="294" />
-                <div class="decription">
+                <div class="description">
                   <h2 class="portfolio-title">Проєкт Boxes</h2>
                   <p class="portfolio-text">Додаток</p>
                 </div>
@@ -110,7 +110,7 @@
             <li class="item">
               <a class="link" href="">
                 <img src="./images/portfolio/img6.jpg" alt="monitor" width="370" height="294" />
-                <div class="decription">
+                <div class="description">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
                 </div>
@@ -124,7 +124,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="decription">
+                <div class="description">
                   <h2 class="portfolio-title">Видання Limited Edition</h2>
                   <p class="portfolio-text">Дизайн</p>
                 </div>
@@ -133,7 +133,7 @@
             <li class="item">
               <a class="link" href="">
                 <img src="./images/portfolio/img8.jpg" alt="sign" width="370" height="294" />
-                <div class="decription">
+                <div class="description">
                   <h2 class="portfolio-title">Проєкт LAB</h2>
                   <p class="portfolio-text">Маркетинг</p>
                 </div>
@@ -147,7 +147,7 @@
                   width="370"
                   height="294"
                 />
-                <div class="decription">
+                <div class="description">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-text">Додаток</p>
                 </div>
