--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 alt="чоловік років тридцяти в окулярах та з бородою"
                 width="270"
               />
-              <div class="decription">
+              <div class="description">
                 <h3 class="team-title">Ігор Дем'яненко</h3>
                 <p class="team-text">Product Designer</p>
               </div>
@@ -134,7 +134,7 @@
                 alt="білява жінка в окулярах усміхається. вдягнена в піджак"
                 width="270"
               />
-              <div class="decription">
+              <div class="description">
                 <h3 class="team-title">Ольга Рєпіна</h3>
                 <p class="team-text">Frontend Developer</p>
               </div>
@@ -145,7 +145,7 @@
                 alt="чоловік вдягнений в рубашку, посміхається"
                 width="270"
               />
-              <div class="decription">
+              <div class="description">
                 <h3 class="team-title">Микола Тарасов</h3>
                 <p class="team-text">Marketing</p>
               </div>
@@ -156,7 +156,7 @@
                 alt="чоловік в окулярах з бородою, вдягнений в чорну футболку"
                 width="270"
               />
-              <div class="decription">
+              <div class="description">
                 <h3 class="team-title">Михайло Єрмаков</h3>
                 <p class="team-text">UI Designer</p>
               </div>
